fix: hr's under h1's receive too much space
Caused by @wesleyboar:
- introduced by #17
- suggested by #18

--- a/user-guide/docs/css/ds-docs.css
+++ b/user-guide/docs/css/ds-docs.css
@@ -56,11 +56,14 @@ h6 {
 /* To make horizontal rules more obvious */
 /* FAQ: Our pages are so tall, that we will let users on big <hr>s */
 /* NOTE: Alternative UX is more difficult using our ReadTheDocs theme */
-hr:not(
+hr:where(:not(
     [role="navigation"] *,
     [role="main"] ~ footer *
-) {
+)) {
     border-top-color: #343131; /* copied from sidebar background */
+    margin-block: 5rem;
+}
+hr.spacer {
     margin-block: 20rem 5rem;
 }
 
